SERVER-15040 initialize our own HeartbeatMemberData when updating config in the TopologyCoordinator